Se agregan enlaces para los menus

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li>Motivos de Oración</li>
                     </ul>
                 </a>
-                <a href="#">Blog</a>
+                <a href="blog.html">Blog</a>
                 <a href="#">Televisión</a>
                 <a href=" " onclick="radio()">Radio</a>
             </ul>
