Se agrega cuadro de en vivo

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <div id="btn-prev" >&#60;</div>
         <div id="btn-next" >&#62;</div>
     </main>
+    <div id="en_vivo">
+        <p>En vivo!</p>
+    </div>
     <div id="content">
         <section class="contenido">
             <div id="cont_editorial" class="cont">
