Se hace un salto de linea en el contenido

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     conocidade un producto de belleza. Tuvo gran exito, 
                     y podemos prguntarnos a que se debe. ¿Será porque 
                     la expresion alimenta la buena opinion que cada uno 
-                    tiene de si mismo?
+                    tiene de si mismo? <br> <br>
                     <i id="pagina_evan" class="ver_mas">Ver mas..</i>
                 </p>
             </div>
