Se añade efecto touch para slider

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estilo.css">
     <script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="js/hammer.min.js"></script>
     <title>IBPR</title>
 </head>
 <body>
