--- a/clima.html
+++ b/clima.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 	<h1>Este es clima actual</h1>
-	<div id="cont_d31745ea3f98b3e771c73e46bcddd089"><script type="text/javascript" async src="https://www.meteored.com.py/wid_loader/d31745ea3f98b3e771c73e46bcddd089"></script></div>
+	<!--div id="cont_d31745ea3f98b3e771c73e46bcddd089"><script type="text/javascript" async src="https://www.meteored.com.py/wid_loader/d31745ea3f98b3e771c73e46bcddd089"></script></div-->
+
+	<img src="https://www.meteored.com.py/wimages/foto5d104ace25db27ded4f72b4497beb3b9.png">
 </body>
 </html>
