Se añade texto de la editorial y con sus propios estilos

--- a/blog.html
+++ b/blog.html
@@ -32,20 +32,35 @@
             </ul>
         </nav>
     </header>
-    <div id="content">
-        <section class="contenido">
-            <div id="cont_editorial" class="cont">
+        <section class="blog">
+            <div id="editorial_1">
                 <h3>Editorial</h3><br>
                 <h4>Una Iglesia que crece</h4>
                 <p>
-                    Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. Creerle a 
-                    Dios implica aceptar Su palabra y entregarse para hacer su voluntad. Esto trae 
-                    consigo.. <br><br>
-                    <i id="pagina_edit" class="ver_mas">ver mas..</i>
-                </p>
-            </div>    
+                    Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. 
+                    Creerle a Dios implica aceptar Su palabra y entregarse para hacer su voluntad
+                    . Esto trae consigo una crisis, o sea, un conflicto de voluntades; por un lado, 
+                    sé que la voluntad de Dios es la mejor, es buena y no se puede cambiar. Por 
+                    otro, está la mia que es débil, egoísta y se opone a la de Dios.
+                    Cuando oramos, confrontamos nuestro ser, con el de Dios, tres veces Santo,
+                    perfecto, puro. Cuando oramos, no podemos salir de su Presencia igual que 
+                    como entramos.
+                    Hay un cambio que debemos de efectuar; ajustar a su voluntad y propósito.
+                    Para la iglesia de Jerusalén, en Antioquía, esto es normal. Ellos dieron sus 
+                    vidas  por su Señor y Salvador Jesucristo.
+                    Cuando aprendamos  esto de aquellos nuestros hermanos que oyendo la voz del Señor,
+                    no fueron rebeldes, sino que a su obediencia, resultó en un crecimiento maravilloso 
+                    del Reino de Dios e todo el mundo conocido entonces, seremos como ellos una iglesia 
+                    ferviente en espiritu, pujante, llenos de fe en nuestro Señor, quien fue generoso 
+                    en su ofrenda; su propia vida en una horrible cruz para salvarnos de toda condenacion.
+                    Hermanos, queremos crecer en todo, y esto le agrada al Señor. Entonces decídete a 
+                    entrar a la vida de oracion para entrenar tu oído espiritual para oír la voz de tu 
+                    Señor y obedecerle.
+                    Saludos y bendiciones!
+                    Pr Alfredo Figari
+                </p>    
+            </div>
         </section>
-    </div>
     <footer id="pie">
         <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
         <div id="redes">
@@ -56,7 +71,7 @@
         </div>
         
     </footer>
-    <script src="../js/design.js"></script>
+    <script src="js/design.js"></script>
 </body>
 
 
