Se combia de color de fondo y color de letras de los titulos, dentro de la pagina blog

--- a/blog.html
+++ b/blog.html
@@ -12,11 +12,11 @@
     <header>
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu"><img src="img/icono_menu_2.png" width="60" height="60"></label>
-		<h1 class="titulos">IBPR</h1>
+		<h1 class="titulos_blog">IBPR</h1>
 		<img src="img/cruz_icono.png" width="50" height="40" id="icono-cruz">
-        <h2 class="titulos">Ministerio Amigos de Jesús</h2>
+        <h2 class="titulos_blog">Ministerio Amigos de Jesús</h2>
         <nav class="menu">
-            <ul>
+            <ul id="menu_blog">
                 <a href="index.html">Inicio</a>
                 <a href="#">Nosotros</a>
                 <a id="serv">Servicios
