Se eliminan imagenes irelevantes y se cambia de color de texto-blog

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="img/icono_menu_2.png" width="60" height="60"></label>
+        <label for="btn-menu" class="icon-menu"></label>
 		<h1 class="titulos_blog">IBPR</h1>
 		<img src="img/cruz_icono.png" width="50" height="40" id="icono-cruz">
         <h2 class="titulos_blog">Ministerio Amigos de Jesús</h2>
