--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <input type="checkbox" id="btn-menu">
-        <label for="btn-menu"><img src="img/icono_menu_2.png" width="60" height="60"></label>
+        <label for="btn-menu" class="icon-menu"></label>
 		<h1 class="titulos">IBPR</h1>
 		<img src="img/cruz_icono.png" width="50" height="40" id="icono-cruz">
         <h2 class="titulos">Ministerio Amigos de Jesús</h2>
