Se añaden nuevas refexiones con sus respectivos  fondos de pantalla en el index y blog

--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
         </section>
         <section class="contenido">
             <div id="cont_info" class="cont">
-                <h3>El Plan de salud de Dios</h3>
+                <h3>La verdadera grandeza</h3>
                 <p>
-                    La atención médica de primera no tiene precio,
-                    sin embargo, ¿no sería algo maraavilloso si no 
-                    necesitáramos más a los médicos? <br><br>
+                    Hace algunos años una fundación humanitaria se contactó con un ex 
+                    presidente de un importante país para pedirle.. <br><br>
                     <i id="pagina_info" class="ver_mas">ver mas..</i>
                 </p>
             </div>
@@ -91,6 +90,43 @@
                     la expresion alimenta la buena opinion que cada uno 
                     tiene de si mismo? <br> <br>
                     <i id="pagina_evan" class="ver_mas">Ver mas..</i>
+                </p>
+            </div>
+        </section>
+        <section class="contenido">
+            <div class="cont" id="cont_vida">
+                <h3>El sentido de la vida</h3>
+                <p>
+                    Cada uno se hace su propia idea de las cosas en funcion a sus experiencias
+                     y de la gente que lo rodea. En efecto, cada dia tenemos que tomar multples 
+                     desiciones, pequeños o grandes. Debemos diferenciar entre  <br>
+                     <i id="pagina_evan" class="ver_mas">Ver mas..</i>
+                </p>
+            </div>
+        </section>
+        <section class="contenido">
+            <div class="cont" id="cont_hormigas">
+                <h3>¡Atención hormigas!</h3>
+                <p>
+                    Miguel observaba fascinado una larga fila de hormigas que atravesaban 
+                    la vía. Repentinamente escuchó el ruido de un automóvil, y exclamó: 
+                    "¡Atención hormigas, un automóvil! ¡Córranse rápido!"". 
+                    Pero las hormigas.. <br>
+                    <i id="pagina_hormigas" class="ver_mas">Ver mas..</i>
+
+                </p>
+            </div>
+        </section>
+        <section class="contenido">
+            <div class="cont" id="cont_alma">
+                <h3>¿Cómo está su alma?</h3>
+                <p>
+                    Mire a los ojos a uno de sus seres queridos, o mírese usted mismo
+                    en un espejo. ¿Puede escapar a esta convicción profunda de que el 
+                    hombre no está hecho simplemente de carne y huesos, sino que posee 
+                    un alma inmaterial? <br>
+                    Jesús hizo una pregunta seria.. <br>
+                    <i id="pagina_alma" class="ver_mas">Ver mas..</i>
                 </p>
             </div>
         </section>
