--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
             </ul>
         </nav>
     </header>
+    <!---------------------------Versiculo lema de la Iglesia--------------->
+    <div id="slogan">
+            <div class="cleanslate w24tz-current-time w24tz-small" style="display: inline-block !important; visibility: hidden !important; min-width:200px !important; min-height:100px !important;"><p><a href="//24timezones.com/es_hora/paraguay_reloj.php" style="text-decoration: none" class="clock24" id="tz24-1558092691-cc14789-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIxIiwic2hvd3NlY29uZHMiOiIwIiwiY29udGFpbmVyX2lkIjoiY2xvY2tfYmxvY2tfY2I1Y2RlOWI5MzExYjEwIiwidHlwZSI6ImRiIiwibGFuZyI6ImVzIn0=" title="hora actual Paraguay" target="_blank" rel="nofollow">Hora actual en Paraguay</a></p><div id="clock_block_cb5cde9b9311b10"></div></div>
+            <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
+        <!--cite>	
+            Vosotros sois mis amigos, hacéis lo que yo os mando. <br>
+            Juan 15:14
+        </cite-->
+    </div>
+
+    <!-----------------------------Widget para el clima--------------------------------->
+    <div class="clima">
+        <div id="TT_JyiwbhtBYaar8FIU7fujzzDzD6a1TUa2bYktEcioKkj" class="texto"></div>
+        <script src="https://www.tutiempo.net/s-widget/l_JyiwbhtBYaar8FIU7fujzzDzD6a1TUa2bYktEcioKkj">
+        </script>
+    </div>
+
+    <!-----------------------------Slider de imagenes----------------------->
     <main id="c-slider">
         <div id="slider">
             <section class="portada">
@@ -75,7 +93,8 @@
                 <h3>La verdadera grandeza</h3>
                 <p>
                     Hace algunos años una fundación humanitaria se contactó con un ex 
-                    presidente de un importante país para pedirle.. <br><br>
+                    presidente de un importante país para pedirle que ejerciera algunas 
+                    responsabilidades en ella. Este aceptó.. <br><br>
                     <i id="pagina_info" class="ver_mas">ver mas..</i>
                 </p>
             </div>
@@ -87,8 +106,7 @@
                     Este titulo hace referecia a una publicidad muy 
                     conocidade un producto de belleza. Tuvo gran exito, 
                     y podemos prguntarnos a que se debe. ¿Será porque 
-                    la expresion alimenta la buena opinion que cada uno 
-                    tiene de si mismo? <br> <br>
+                    la expresion alimenta la buena opinion..<br> <br>
                     <i id="pagina_evan" class="ver_mas">Ver mas..</i>
                 </p>
             </div>
@@ -123,9 +141,8 @@
                 <p>
                     Mire a los ojos a uno de sus seres queridos, o mírese usted mismo
                     en un espejo. ¿Puede escapar a esta convicción profunda de que el 
-                    hombre no está hecho simplemente de carne y huesos, sino que posee 
-                    un alma inmaterial? <br>
-                    Jesús hizo una pregunta seria.. <br>
+                    hombre no está hecho simplemente de carne y huesos, sino que posee
+                    .. <br>
                     <i id="pagina_alma" class="ver_mas">Ver mas..</i>
                 </p>
             </div>
