Se agrega comentarios dividiendo sectores

--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
             </ul>
         </nav>
     </header>
-    <!---------------------------Versiculo lema de la Iglesia--------------->
-    <div id="slogan">
-            <div class="cleanslate w24tz-current-time w24tz-small" style="display: inline-block !important; visibility: hidden !important; min-width:200px !important; min-height:100px !important;"><p><a href="//24timezones.com/es_hora/paraguay_reloj.php" style="text-decoration: none" class="clock24" id="tz24-1558092691-cc14789-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIxIiwic2hvd3NlY29uZHMiOiIwIiwiY29udGFpbmVyX2lkIjoiY2xvY2tfYmxvY2tfY2I1Y2RlOWI5MzExYjEwIiwidHlwZSI6ImRiIiwibGFuZyI6ImVzIn0=" title="hora actual Paraguay" target="_blank" rel="nofollow">Hora actual en Paraguay</a></p><div id="clock_block_cb5cde9b9311b10"></div></div>
-            <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
-        <!--cite>	
-            Vosotros sois mis amigos, hacéis lo que yo os mando. <br>
-            Juan 15:14
-        </cite-->
+    <!---------------------------Widget para la hora local--------------->
+    <div id="hora">
+        <div class="cleanslate w24tz-current-time w24tz-small" style="display: inline-block !important; visibility: hidden !important; min-width:200px !important; min-height:100px !important;"><p><a href="//24timezones.com/es_hora/paraguay_reloj.php" style="text-decoration: none" class="clock24" id="tz24-1558092691-cc14789-eyJob3VydHlwZSI6IjI0Iiwic2hvd2RhdGUiOiIxIiwic2hvd3NlY29uZHMiOiIwIiwiY29udGFpbmVyX2lkIjoiY2xvY2tfYmxvY2tfY2I1Y2RlOWI5MzExYjEwIiwidHlwZSI6ImRiIiwibGFuZyI6ImVzIn0=" title="hora actual Paraguay" target="_blank" rel="nofollow">Hora actual en Paraguay</a></p><div id="clock_block_cb5cde9b9311b10"></div></div>
+        <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
     </div>
 
     <!-----------------------------Widget para el clima--------------------------------->
@@ -72,9 +68,12 @@
         <div id="btn-prev" >&#60;</div>
         <div id="btn-next" >&#62;</div>
     </main>
+    <!------------Cuadro de En vivo---------->
     <div id="en_vivo">
         <p>En vivo!</p>
     </div>
+
+    <!------------Cuadro de todos los contenidos, editorial y reflexiones---->
     <div id="content">
         <section class="contenido">
             <div id="cont_editorial" class="cont">
@@ -171,6 +170,7 @@
         </section-->
     </div>
 
+    <!----------------Pie de pagina y redes sociales----------->
     <footer id="pie">
         <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
         <div id="redes">
