Se añade versiculo de la editorial, separandolos

--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,11 @@
         </nav>
     </header>
         <section class="blog">
+            <aside class="versiculos">
+                        Así que, los que recibieron su palabra fueron bautizados; y se añadieron aquel día 
+                        como tres mil personas.
+                        Hechos 2:41
+            </aside>
             <div class="editorial_1">
                 <h3>Editorial</h3><br>
                 <h4>Una Iglesia que crece</h4>
@@ -144,7 +149,7 @@
                     Santiago 4:14
                 </p>
             </div>
-        </section>
+            </section>
         <section class="blog"> 
             <div class="editorial_1">
                 <h3>¿Cómo está su alma?</h3>
@@ -181,7 +186,7 @@
 
                 </p>
             </div>
-        </section>
+       </section>
     <footer id="pie">
         <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
         <div id="redes">
