Se cambia de carpeta las imagenes de fondo

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     <main id="c-slider">
         <div id="slider">
             <section class="portada">
-                <img src="imagenes/img_1.jpg" width="850" height="580">
+                <img src="slider/img_1.jpg" width="850" height="580">
             </section>
             <section class="portada">
-                <img src="imagenes/img_2.jpg" width="850" height="580">
+                <img src="slider/img_2.jpg" width="850" height="580">
             </section>
             <section class="portada">
-                <img src="imagenes/img_3.jpg" width="850" height="580">
+                <img src="slider/img_3.jpg" width="850" height="580">
             </section>
             <section class="portada">
-                <img src="imagenes/img_4.jpg" width="850" height="580">
+                <img src="slider/img_4.jpg" width="850" height="580">
             </section>
             <section class="portada">
-                <img src="imagenes/img_5.jpg" width="850" height="580">
+                <img src="slider/img_5.jpg" width="850" height="580">
             </section>
         </div>
         <div id="btn-prev" >&#60;</div>
