se movieron las imagenes a otra carpeta

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
     <main id="c-slider">
         <div id="slider">
             <section class="portada">
-                <img src="slider/img_1.JPG">
+                <img src="imagenes/img_1.JPG">
             </section>
             <section class="portada">
-                <img src="slider/img_2.JPG">
+                <img src="imagenes/img_2.JPG">
             </section>
             <section class="portada">
-                <img src="slider/img_3.JPG">
+                <img src="imagenes/img_3.JPG">
             </section>
             <section class="portada">
-                <img src="slider/img_4.JPG">
+                <img src="imagenes/img_4.JPG">
             </section>
             <section class="portada">
-                <img src="slider/img_5.JPG">
+                <img src="imagenes/img_5.JPG">
             </section>
         </div>
         <div id="btn-prev" >&#60;</div>
