Se agrega nuevos ejemplos de prueba

--- a/prueba.html
+++ b/prueba.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Ejemplo aprenderaprogramar.com</title>
-	<meta charset="utf-8">
-	<script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
-	<script type="text/javascript">
-	</script>
-
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
 	<style>
-		.ejemplo:nth-child(2) {
-			color: red;
+		#parte_1, #parte_2 {
+			height: 200vh;
 		}
+
+		section {
+			width: 200px;
+			height: 100px;
+			background: red;
+		}
+
 	</style>
 </head>
 <body>
-	<div>
-		<section class="ejemplo">
-			<p>Primero</p>
-		</section>
-		<section class="ejemplo">
-			<p>Segundo</p>
-		</section>
-		<section class="ejemplo">
-			<p>Terecero</p>
-		</section>
+	<h1>Pruebas</h1>
+	<input type="button" value="Presionam" onclick="ventana()">
+	<a href="#parte_2">Ir a la parte 2</a>
+	<div id="parte_1">
+		<section></section>
 	</div>
-</body>
+	<div id="parte2">
+		<section></section>
+	</div>
+	
+	<script>
+		
 
+		function ventana() {
+			window.scrollTo(0, 500);
+		}
+	</script>
+</body>
 </html>
