Se hacen saltos de linea

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <p>
                     Cada uno se hace su propia idea de las cosas en funcion a sus experiencias
                      y de la gente que lo rodea. En efecto, cada dia tenemos que tomar multples 
-                     desiciones, pequeños o grandes. Debemos diferenciar entre  <br>
+                     desiciones, pequeños o grandes. Debemos diferenciar entre  <br><br>
                      <i id="pagina_evan" class="ver_mas">Ver mas..</i>
                 </p>
             </div>
@@ -128,7 +128,7 @@
                     Miguel observaba fascinado una larga fila de hormigas que atravesaban 
                     la vía. Repentinamente escuchó el ruido de un automóvil, y exclamó: 
                     "¡Atención hormigas, un automóvil! ¡Córranse rápido!"". 
-                    Pero las hormigas.. <br>
+                    Pero las hormigas.. <br><br>
                     <i id="pagina_hormigas" class="ver_mas">Ver mas..</i>
 
                 </p>
@@ -141,7 +141,7 @@
                     Mire a los ojos a uno de sus seres queridos, o mírese usted mismo
                     en un espejo. ¿Puede escapar a esta convicción profunda de que el 
                     hombre no está hecho simplemente de carne y huesos, sino que posee
-                    .. <br>
+                    .. <br><br>
                     <i id="pagina_alma" class="ver_mas">Ver mas..</i>
                 </p>
             </div>
