Se agrega icono para pagina

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="js/hammer.min.js"></script>
+    <link rel="icon" href="img/cruz.ico">
     <title>IBPR</title>
 </head>
 <body>
