Se agregan versiculos correspondiente a los contenidos

--- a/blog.html
+++ b/blog.html
@@ -38,12 +38,32 @@
     <section class="blog">
         <!-------------------------------Versiculos correspondientes a la editorial----->
         <aside class="versiculos">
-            Así que, los que recibieron su palabra fueron bautizados; y se añadieron aquel día 
-            como tres mil personas.
-            Hechos 2:41
+            <p>
+                "Así que, los que recibieron su palabra fueron bautizados; y se añadieron aquel día 
+                como tres mil personas." <br>
+                <cite>Hechos 2:41</cite>
+            </p><br>
+            <p>
+                "de quien todo el cuerpo, bien concertado y unido entre sí por todas las coyunturas 
+                que se ayudan mutuamente, según la actividad propia de cada miembro, recibe su 
+                crecimiento para ir edificándose en amor."<br>
+                <cite>Efesios 4:16</cite>
+            </p> <br><br>
+            <p>
+                "y no asiéndose de la Cabeza, en virtud de quien todo el cuerpo, nutriéndose 
+                y uniéndose por las coyunturas y ligamentos, crece con el crecimiento que da Dios."
+                <cite>Colosenses 2:19</cite>
+            </p><br><br>
+            <p>
+                "Yo planté, Apolos regó; pero el crecimiento lo ha dado Dios.
+                Así que ni el que planta es algo, ni el que riega, sino Dios, que da el crecimiento."<br>
+                <cite>1 Corintios 3:6-7</cite>
+            </p>
+            
         </aside>
         <!---------------------------Editorial Principal-------------------->
         <div class="editorial_1">
+        
             <h3>Editorial</h3><br>
             <h4>Una Iglesia que crece</h4>
             <p>
@@ -74,6 +94,15 @@
 
     <!-------------------------------Segunda publicacion------------------>
     <section class="blog"> 
+        <!-------------------------------Versiculos correspondientes a la editorial----->
+        <aside class="versiculos">
+                <p>
+                    "Porque ya conocéis la gracia de nuestro Señor Jesucristo, que por amor a 
+                    vosotros se hizo pobre, siendo rico, para que vosotros con su pobreza 
+                    fueseis enriquecidos."
+                    <cite>2 Corintios 8:9</cite>
+                </p>
+        </aside>
         <div class="editorial_1">
             <h3>La verdadera grandeza</h3>
             <p>
