--- a/blog.html
+++ b/blog.html
@@ -231,7 +231,7 @@
     </section>
 
     <!-------------------------------Pie de Pagina------------------>
-    <footer id="pie">
+    <footer id="pie" class="pie_blog">
         <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
         <div id="redes">
             <a href="http://facebook.com" class="icon-facebook"></a>
