Se modifica margenes superiores y laterales de los versiculos para posicionar a la derecha de la editorial

--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,7 @@
             </ul>
         </nav>
     </header>
+
     <!-------------------------------Aqui empieza la seccion de la editorial----->
     <section class="blog">
         <!-------------------------------Versiculos correspondientes a la editorial----->
@@ -99,12 +100,12 @@
                 <p>
                     "Porque ya conocéis la gracia de nuestro Señor Jesucristo, que por amor a 
                     vosotros se hizo pobre, siendo rico, para que vosotros con su pobreza 
-                    fueseis enriquecidos."
+                    fueseis enriquecidos."<br>
                     <cite>2 Corintios 8:9</cite>
                 </p>
         </aside>
         <div class="editorial_1">
-            <h3>La verdadera grandeza</h3>
+            <h4>La verdadera grandeza</h4>
             <p>
                 Hace algunos años una fundación humanitaria se contactó con un ex 
                 presidente de un importante país para pedirle que ejerciera algunas 
@@ -231,7 +232,7 @@
     </section>
 
     <!-------------------------------Pie de Pagina------------------>
-    <footer id="pie" class="pie_blog">
+    <footer id="pie">
         <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
         <div id="redes">
             <a href="http://facebook.com" class="icon-facebook"></a>
