Se hace una pequeña prueba

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <title>Blog</title>
 </head>
 <body>
-    <!-----------------------------Seccion Menu de la Pagina----------->
+    <!-----------------------------Seccion Menu de la Pagina------------>
     <header>
         <input type="checkbox" id="btn-menu">
         <label for="btn-menu" class="icon-menu"></label>
