Se agregan versiculos a los blog

--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
         <div class="editorial_1">
         
             <h3>Editorial</h3><br>
-            <h4>Una Iglesia que crece</h4>
+            <h4>Una Iglesia que crece</h4><br>
             <p>
                 Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. 
                 Creerle a Dios implica aceptar Su palabra y entregarse para hacer su voluntad.
@@ -102,10 +102,30 @@
                     vosotros se hizo pobre, siendo rico, para que vosotros con su pobreza 
                     fueseis enriquecidos."<br>
                     <cite>2 Corintios 8:9</cite>
+                </p><br>
+                <p>
+                    "Con toda humildad y mansedumbre, soportándoos con paciencia los unos a 
+                    los otros en amor."
+                    <cite>Efesios 4:2</cite>
+                </p> <br>
+                <p>
+                    "Nada hagáis por contienda o por vanagloria; antes bien con humildad, 
+                    estimando cada uno a los demás como superiores a él mismo."
+                    <cite>Filipenses 2:3</cite>
+                </p> <br>
+                <p>
+                   " Cuando viene la soberbia, viene también la deshonra;
+                    Mas con los humildes está la sabiduría."
+                    <cite>Proverbios 11:2</cite>
+                </p><br>
+                <p>
+                    Unánimes entre vosotros; no altivos, sino asociándoos con los humildes. 
+                    No seáis sabios en vuestra propia opinión. <br>
+                    <cite>Romanos 12:16</cite>
                 </p>
         </aside>
         <div class="editorial_1">
-            <h4>La verdadera grandeza</h4>
+            <h3>La verdadera grandeza</h3><br>
             <p>
                 Hace algunos años una fundación humanitaria se contactó con un ex 
                 presidente de un importante país para pedirle que ejerciera algunas 
@@ -136,8 +156,29 @@
 
     <!-------------------------------Tercera publicacion------------------>
     <section class="blog">
+        <aside class="versiculos">
+            <p>
+                "Cuando se manifestó la bondad de Dios nuestro Salvador, y su amor para 
+                con los hombres, nos salvó, no por obras de justicia que nosotros hubiéramos 
+                hecho, sino por su misericordia." <br>
+                <cite>Tito 3:4-5</cite>
+            </p><br>
+
+            <p>
+                "No elevamos nuestros ruegos ante ti confiados en nuestras justicias, sino en 
+                tus muchas misericordias." <br>
+                <cite>Daniel 9:18</cite>
+            </p> <br>
+            <p>
+                ¡Vamos ahora! los que decís: Hoy y mañana iremos a tal ciudad, y estaremos 
+                allá un año, y traficaremos, y ganaremos;
+                cuando no sabéis lo que será mañana. Porque ¿qué es vuestra vida? 
+                Ciertamente es neblina que se aparece por un poco de tiempo, y luego se desvanece.
+                <cite>Santiago 4:13-14</cite>
+            </p>
+        </aside>
         <div class="editorial_1">
-            <h3>Por que usted lo vale!</h3>
+            <h3>Por que usted lo vale!</h3><br>
             <p>
                 Este titulo hace referecia a una publicidad muy conocidade un producto de belleza. Tuvo gran exito, y podemos prguntarnos 
                 a que se debe. ¿Será porque la expresion alimenta la buena opinion que cada uno tiene de si mismo?
@@ -158,7 +199,7 @@
     <!-------------------------------Cuarta publicacion------------------>
     <section class="blog">
         <div class="editorial_1">
-            <h3>El Sentido de la vida</h3>
+            <h3>El Sentido de la vida</h3><br>
             <p>
                 Cada uno se hace su propia idea de las cosas en funcion a sus experiencias
                     y de la gente que lo rodea. En efecto, cada dia tenemos que tomar multples 
@@ -195,7 +236,7 @@
     <!-------------------------------Quinta publicacion------------------>
     <section class="blog"> 
         <div class="editorial_1">
-            <h3>¿Cómo está su alma?</h3>
+            <h3>¿Cómo está su alma?</h3><br>
             <p>
                 Mire a los ojos a uno de sus seres queridos, o mírese usted mismo en un espejo. 
                 ¿Puede escapar a esta convicción profunda de que el hombre no está hecho 
