--- a/src/intersecion.html
+++ b/src/intersecion.html
@@ -19,7 +19,7 @@
         <h2 class="titulos_blog">Ministerio Amigos de Jesús</h2>
         <nav class="menu">
             <ul id="menu_blog">
-                <a href="../index.html">Inicio</a>
+                <a href="../index.php">Inicio</a>
                 <a href="#">Nosotros</a>
                 <a id="serv">Servicios
                     <ul id="menu_serv">
