Se agregan archivos faltantes de los vinculos correspondientes

--- a/src/actividades.html
+++ b/src/actividades.html
@@ -20,7 +20,7 @@
         <nav class="menu">
             <ul id="menu_blog">
                 <a href="../index.html">Inicio</a>
-                <a href="#">Nosotros</a>
+                <a href="nosotros.html">Nosotros</a>
                 <a id="serv">Servicios
                     <ul id="menu_serv">
                         <li id="actividades">Actividades</li>
