--- a/src/blog.html
+++ b/src/blog.html
@@ -19,8 +19,8 @@
         <h2 class="titulos_blog">Ministerio Amigos de Jesús</h2>
         <nav class="menu">
             <ul id="menu_blog">
-                <a href="../index.html">Inicio</a>
-                <a href="#">Nosotros</a>
+                <a href="../index.php">Inicio</a>
+                <a href="nosotros.html">Nosotros</a>
                 <a id="serv">Servicios
                     <ul id="menu_serv">
                         <li id="actividades">Actividades</li>
