--- a/src/nosotros.html
+++ b/src/nosotros.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/estilo.css">
     <script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="icon" href="../img/cruz.ico">
-    <title>Consejería</title>
+    <title>Nosotros</title>
 </head>
 <body>
     <!-----------------------------Seccion Menu de la Pagina------------>
@@ -19,8 +19,8 @@
         <h2 class="titulos_blog">Ministerio Amigos de Jesús</h2>
         <nav class="menu">
             <ul id="menu_blog">
-                <a href="../index.html">Inicio</a>
-                <a href="nosotros.html">Nosotros</a>
+                <a href="../index.php">Inicio</a>
+                <a href="#">Nosotros</a>
                 <a id="serv">Servicios
                     <ul id="menu_serv">
                         <li id="actividades">Actividades</li>
@@ -28,12 +28,13 @@
                         <li id="m_oracion">Motivos de Oración</li>
                     </ul>
                 </a>
-                <a href="blog.html">Blog</a>
+                <a href="#">Blog</a>
                 <a href="#">Televisión</a>
                 <a href=" " onclick="radio()">Radio</a>
             </ul>
         </nav>
     </header>
+    
    <!-------------------------------Pie de Pagina------------------>
    <footer id="pie">
     <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
