--- a/prueba.html
+++ b/prueba.html
@@ -1,32 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
-	<style>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+	<style>
+		.titulos {
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 3;
+		}
+
+		.slide {
+			position: relative;
+			z-index: 2;
+		}
 	</style>
 </head>
 <body>
-	<h1>Pruebas</h1>
-	<input type="button" value="Guardar" onclick="abrir()">
+	<div class="container">
+		<div class="row titulos">
+			<div class="col-md-12 col-lg-12">
+				<h1 class="text-success float-left">Ministerio Amigos de Jesus</h1>
+			</div>
+		</div>
+
+		<div id="botones" class="carousel slide" data-ride="carousel">
+
+			<!---------------------------------Imagenes------------------------------------>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="imagenes/img_1.JPG" class="d-block w-100">
+			  	</div>
+			  	<div class="carousel-item">
+			  		<img src="imagenes/img_2.JPG" class="d-block w-100">
+			  	</div>
+			  	<div class="carousel-item">
+			  		<img src="imagenes/img_3.JPG" class="d-block w-100">
+			  	</div>
+			</div>
+
+			<!-----------------------------------Botones----------------------------------->
+			<a class="carousel-control-prev" href="#botones" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  	<!--span class="sr-only">Anterior</span-->
+			</a>
+			<a class="carousel-control-next" href="#botones" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  	<!--span class="sr-only">Seguiente</span-->
+			</a>
+		</div>
+
+	</div>
 	
-	<script>
 
-			
 
-function ventanaSecundaria (URL){ 
-   window.open(URL,"ventana1","width=120,height=300,scrollbars=NO");
- 
-} 
-function abrir() {
-	ventanaSecundaria("http://www.desarrolloweb.com"); 
-}
+
+
+
+
+
+
+<div class="container">
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="imagenes/img_1.JPG" alt="First slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="imagenes/img_2.JPG" alt="Second slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="imagenes/img_3.JPG" alt="Third slide">
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+</div>
 
   
-	</script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
