se realiza prueba de grilla

--- a/prueba.html
+++ b/prueba.html
@@ -9,51 +9,83 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 	<style>
-		.titulos {
-			position: absolute;
-			top: 0;
-			left: 0;
-			z-index: 3;
+		.sec1 {
+			height: 40vh;
+			width: 50%;
+			
 		}
 
-		.slide {
-			position: relative;
-			z-index: 2;
+		.sec2 {
+			height: 40vh;
+			width: 50%;
+
+		}
+
+		.sec3 {
+			height: 40vh;
+			width: 50%;
+		
+		}
+
+		.sec4 {
+			height: 40vh;
+			width: 50%;
+		
+		}
+
+		.sec5 {
+			height: 40vh;
+			width: 50%;
+	
+		}
+
+		.sec6 {
+			height: 40vh;
+			width: 50%;
+			
 		}
 	</style>
 </head>
 <body>
 	<div class="container">
-		<div class="row titulos">
-			<div class="col-md-12 col-lg-12">
-				<h1 class="text-success float-left">Ministerio Amigos de Jesus</h1>
-			</div>
+		<div class="row">
+			<section class="col-md-12 col-lg-6 sec1 ">
+				<p class="p-5 m-5">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
+				</p>
+			</section>
+			<br><br>
+			<section class="col-md-12 col-lg-6 sec2 ">
+				<p class="p-5 m-5">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
+				</p>
+			</section>
 		</div>
 
-		<div id="botones" class="carousel slide" data-ride="carousel">
+		<div class="row">
+			<section class="col-md-12 col-lg-6 sec3 ">
+				<p class="p-5 m-5">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
+				</p>
+			</section>
+			<section class="col-md-12 col-lg-6 sec4 ">
+				<p class="p-5 m-5">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
+				</p>
+			</section>
+		</div>
 
-			<!---------------------------------Imagenes------------------------------------>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="imagenes/img_1.JPG" class="d-block w-100">
-			  	</div>
-			  	<div class="carousel-item">
-			  		<img src="imagenes/img_2.JPG" class="d-block w-100">
-			  	</div>
-			  	<div class="carousel-item">
-			  		<img src="imagenes/img_3.JPG" class="d-block w-100">
-			  	</div>
-			</div>
-
-			<!-----------------------------------Botones----------------------------------->
-			<a class="carousel-control-prev" href="#botones" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  	<!--span class="sr-only">Anterior</span-->
-			</a>
-			<a class="carousel-control-next" href="#botones" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  	<!--span class="sr-only">Seguiente</span-->
-			</a>
+		<div class="row">
+			<section class="col-md-12 col-lg-6 sec5 ">
+				<p class="p-5 m-5">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
+				</p>
+			</section>
+			<section class="col-md-12 col-lg-6 sec6 ">
+				<p class="p-5 m-5">
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex laudantium possimus a quasi necessitatibus voluptas magni beatae nihil, perferendis maiores! Autem voluptatum impedit iste in officiis fugiat omnis consectetur suscipit.
+				</p>
+			</section>
 		</div>
 
 	</div>
