--- a/src/actividades.html
+++ b/src/actividades.html
@@ -4,47 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <script  src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <link rel="icon" href="../img/cruz.ico">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="icon" href="img/cruz.ico">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Actividades</title>
 </head>
 <body>
     <!-----------------------------Seccion Menu de la Pagina------------>
-    <header>
-        <input type="checkbox" id="btn-menu">
-        <label for="btn-menu" class="icon-menu"></label>
-		<h1 class="titulos_blog">IBPR</h1>
-		<img src="../img/cruz_icono.png" width="50" height="40" id="icono-cruz">
-        <h2 class="titulos_blog">Ministerio Amigos de Jesús</h2>
-        <nav class="menu">
-            <ul id="menu_blog">
-                <a href="../index.html">Inicio</a>
-                <a href="nosotros.html">Nosotros</a>
-                <a id="serv">Servicios
-                    <ul id="menu_serv">
-                        <li id="actividades">Actividades</li>
-                        <li id="consejeria">Consejería</li>
-                        <li id="m_oracion">Motivos de Oración</li>
+    <header class="container">
+        <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+            <div class="container">
+                <h1 class="navbar-brand">IBPR</h1>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#menu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="menu">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Servicios</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Radio</a></li>
                     </ul>
-                </a>
-                <a href="#">Blog</a>
-                <a href="#">Televisión</a>
-                <a href=" " onclick="radio()">Radio</a>
-            </ul>
+                </div>
+            </div>
         </nav>
     </header>
    <!-------------------------------Pie de Pagina------------------>
-   <footer id="pie">
-    <p id="mi_pie">&copy; 2019 - IBPR - M. Amigos de Jesús</p><br>
-    <div id="redes">
-        <a href="http://facebook.com" class="icon-facebook"></a>
-        <a href="http://twitter.com" class="icon-twitter"></a>
-        <a href="http://instagram.com" class="icon-instagram"></a>
-        <a href="http://youtube.com" class="icon-youtube"></a>
+   <div class="d-block fixed-bottom mt-5">
+        <footer class="bg-secondary text-center text-dark ">
+            <span><strong>&copy; 2019 - IBPR - M. Amigos de Jesús</strong></span><br>
+            <div class=row>
+                <div class="col-md-12 col-md-lg">
+                    <a href="http://facebook.com" class="icon-facebook redes"></a>
+                    <a href="http://twitter.com" class="icon-twitter redes"></a>
+                    <a href="http://instagram.com" class="icon-instagram redes"></a>
+                    <a href="http://youtube.com" class="icon-youtube redes"></a>
+                </div>
+            </div>
+        </footer>
     </div>
-</footer>
 
-<script src="../js/design.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="../js/design.js"></script>
 </body>
 </html>
