--- a/src/blog.html
+++ b/src/blog.html
@@ -53,7 +53,7 @@
                     </span><br>
                     
                 </p><br>
-                <p class="p-5 mx-lg-5"> 
+                <p class="p-5"> 
                     Una iglesia que crece, tiene que apredender a escuchar a Dios y creerle. 
                     Creerle a Dios implica aceptar Su palabra y entregarse para hacer su voluntad.
                     Esto trae consigo una crisis, o sea, un conflicto de voluntades; por un lado, 
@@ -98,7 +98,7 @@
                         <cite>Filipenses 2:3</cite>
                     </span><br>
                 </p>
-                <p class="p-5 mx-lg-5">
+                <p class="p-5">
                     Hace algunos años una fundación humanitaria se contactó con un ex 
                     presidente de un importante país para pedirle que ejerciera algunas 
                     responsabilidades en ella. Este aceptó el ofrecimiento, pero para 
@@ -145,7 +145,7 @@
                         <cite>Daniel 9:18</cite>
                     </span><br>
                 </p>
-                <p class="p-5 mx-lg-5">
+                <p class="p-5">
                     Este titulo hace referecia a una publicidad muy conocidade un producto de belleza. Tuvo gran exito, y podemos prguntarnos 
                     a que se debe. ¿Será porque la expresion alimenta la buena opinion que cada uno tiene de si mismo?
                     ¿Que valemos en realidad? Dios creo a cada ser humano a su imagen, segun su semejanza(Genesis 1:26-27)Esto habla de la 
@@ -178,7 +178,7 @@
                     </span><br>
                 </p>
 
-                <p class="p-5 mx-lg-5">
+                <p class="p-5">
                     Cada uno se hace su propia idea de las cosas en funcion a sus experiencias
                     y de la gente que lo rodea. En efecto, cada dia tenemos que tomar multples 
                     desiciones, pequeños o grandes. Debemos diferenciar entre lo que esta bien 
@@ -222,7 +222,7 @@
 
                 </p>
 
-                <p class="p-5 mx-lg-5">
+                <p class="p-5">
                         Miguel observaba fascinado una larga fila de hormigas que atravesaban la vía. Repentinamente escuchó el ruido de un automóvil, y exclamó: «¡Atención hormigas, un automóvil! ¡Córranse rápido!». Pero las hormigas, sordas a la advertencia, prosiguieron su camino... Un anciano que observó la agitación de Miguel, le dijo seriamente: «Hijo mío, si quieres que las hormigas te comprendan, ¡tienes que volverte una hormiga!». Miguel se quedó pensativo, sabía que eso era imposible... Por cierto, la distancia que separa a un niño de una hormiga es infranqueable. Sin embargo, no es nada comparada con la distancia que separa al hombre, una criatura, de Dios su Creador.
                         No obstante, Dios se acercó a nosotros para poder comunicarse con nosotros. Traspasando esa distancia infinita, vino a nosotros en la Persona de su Hijo Jesús. Siendo Dios, Jesús se humilló haciéndose hombre. Nació como un niño pobre, creció y vivió en medio de nosotros. Se puso a nuestro alcance y nos habló del amor y la gracia de Dios en un lenguaje muy comprensible.                        
                         Hoy Jesús nos advierte del juicio que merecen nuestros pecados. Pero, él mismo tomó ese juicio sobre sí muriendo en la cruz. Ofrece la salvación y la vida eterna a todos los que creen en él. Los lleva a Dios como hijos amados y les reserva un lugar en el cielo junto a él.
@@ -254,7 +254,7 @@
                     </span><br>
                 </p>
 
-                <p class="p-5 mx-lg-5">
+                <p class="p-5">
                     Mire a los ojos a uno de sus seres queridos, o mírese usted mismo en un espejo. 
                     ¿Puede escapar a esta convicción profunda de que el hombre no está hecho 
                     simplemente de carne y huesos, sino que posee un alma inmaterial? <br>
