--- a/src/blog.html
+++ b/src/blog.html
@@ -21,7 +21,7 @@
                 <div class="navbar-collapse collapse" id="menu">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a href="../index.php" class="nav-link">Inicio</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
+                        <li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Servicios</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Radio</a></li>
