--- a/src/actividades.html
+++ b/src/actividades.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="icon" href="img/cruz.ico">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="icon" href="../img/cruz.ico">
+    <link rel="stylesheet" href="../css/estilo.css">
     <title>Actividades</title>
 </head>
 <body>
@@ -20,11 +20,18 @@
                 </button>
                 <div class="navbar-collapse collapse" id="menu">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="#" class="nav-link">Inicio</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Nosotros</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Servicios</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Radio</a></li>
+                        <li class="nav-item"><a href="../index.php" class="nav-link">Inicio</a></li>
+                        <li class="nav-item"><a href="nosotros.html" class="nav-link">Nosotros</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Servicios</a>
+                            <ul class="dropdown-menu submenu bg-light">
+                                <li class="dropdown-item"><a href="#" class="nav-link">Actividades</a></li>
+                                <li class="dropdown-item"><a href="consejeria.html" class="nav-link">Consejería</a></li>
+                                <li class="dropdown-item"><a href="intersecion.html" class="nav-link">Motivos de Oración</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+                        <li class="nav-item"><a href="radiopanambi.php" class="nav-link">Radio</a></li>
                     </ul>
                 </div>
             </div>
